# primes

./: CMakeLists.txt  README.md
includes/math/: primes.h
src/: primes.txt  test_create_primes.cxx  test_is_prime.cxx
